// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRangeFromFilters expect exception given ne operator 1`] = `"Not equal (ne) operator is not supported for sequencenumber"`;

exports[`topicmessage validateConsensusTimestampParam tests Verify validateConsensusTimestampParam throws error for -1234567890.000000001 1`] = `
[
  "Invalid parameter: consensus_timestamp",
]
`;

exports[`topicmessage validateConsensusTimestampParam tests Verify validateConsensusTimestampParam throws error for abc 1`] = `
[
  "Invalid parameter: consensus_timestamp",
]
`;

exports[`topicmessage validateGetSequenceMessageParams tests Verify validateGetSequenceMessageParams throws error for -123 1`] = `
[
  "Invalid parameter: topic.id",
  "Invalid parameter: sequencenumber",
]
`;

exports[`topicmessage validateGetSequenceMessageParams tests Verify validateGetSequenceMessageParams throws error for 123.0001 1`] = `
[
  "Invalid parameter: topic.id",
  "Invalid parameter: sequencenumber",
]
`;

exports[`topicmessage validateGetSequenceMessageParams tests Verify validateGetSequenceMessageParams throws error for abc 1`] = `
[
  "Invalid parameter: topic.id",
  "Invalid parameter: sequencenumber",
]
`;

exports[`topicmessage validateGetTopicMessagesParams tests Verify validateGetTopicMessagesParams throws error for -123 1`] = `
[
  "Invalid parameter: topic.id",
]
`;

exports[`topicmessage validateGetTopicMessagesParams tests Verify validateGetTopicMessagesParams throws error for 123.0001 1`] = `
[
  "Invalid parameter: topic.id",
]
`;

exports[`topicmessage validateGetTopicMessagesParams tests Verify validateGetTopicMessagesParams throws error for abc 1`] = `
[
  "Invalid parameter: topic.id",
]
`;
